[package]
name = "cautious-waddle"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A JPEG XL decoder implementation in Rust"
repository = "https://github.com/user/cautious-waddle"
authors = ["Your Name <your.email@example.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
byteorder = "1.4"
thiserror = "1.0"
anyhow = "1.0"

[[example]]
name = "decoder_example"
path = "examples/decoder_example.rs"
